# diydesignstudio

./: README.md  for_DB  package-lock.json  package.json
.github/workflows/: build-and-push.yml
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs
backend/src/config/: app.rs  mod.rs
backend/src/errors/: custom_error.rs
backend/src/handlers/: design_handlers.rs  material_handlers.rs  mod.rs  user_handlers.rs
backend/src/models/: material.rs  mod.rs  rectangle.rs  shape.rs  user.rs
backend/src/models/shapes/: circle.rs  mod.rs  rectangle.rs
backend/src/routes/: mod.rs  shape_2d_routes.rs  shape_3d_routes.rs
backend/src/services/: design_service.rs  material_service.rs  mod.rs  shape_service.rs  user_service.rs
documents/: 1.requirements_document.md  10.database_design.md  11.api_handler_design.md  12.service_layer_design.md  13.database_layer_design.md  14.authentication_session_design.md  15.file_export_import_design.md  16.utility_functions_design.md  2.system_design.md  3.api_documentation.md  4.architecture_design.md  5.user_interface_design.md  6.page_structure_design.md  7.component_design.md  8.state_design.md  9.api_communication_design.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.scss  App.tsx  EditMenu.tsx  FileMenu.tsx  MenuBar.scss  MenuBar.tsx  QuickAccessToolbar.tsx  Ribbon.scss  Ribbon.tsx  Toolbar.tsx  Tub.tsx  ViewMenu.tsx
frontend/src/components/: 高度な2D図形.txt
frontend/src/data/: RibbonTab.ts
送信され的やつを整理するフォルダ/: 必要木材さんちゅつ用２.txt  必要木材算出用バックエンド側１.txt
(+315 files in other folders)
