[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0.181", features = ["derive"] }
mongodb = "2.6.0"
tokio-postgres = "0.7.8"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.104"
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"
env_logger = "0.10.0"